@@ -4,7 +4,8 @@
 -- caused by unintended behaviour.
 
 local Permissions = {
-    player_group = nil
+    player_group = nil,
+    creator_group = nil,
 }
 
 Permissions = {
@@ -24,17 +25,22 @@ Permissions = {
         [defines.input_action.toggle_show_entity_info]=true,
         [defines.input_action.write_to_console]=true,
         [defines.input_action.custom_input]=true,
-        
-        -- TODO This should only be allowed to admins
-        [defines.input_action.mod_settings_changed]=true,
-        [defines.input_action.set_behavior_mode]=true,  --?
-        [defines.input_action.toggle_map_editor]=true,        
+    },
+    creators = {
+        ["stringweasel"] = true,
+        ["Stringweasel"] = true,
     }
 }
 
 -- Add a player to the player permissions group
 function Permissions.add_player(player)
-    Permissions.player_group.add_player(player)
+    if Permissions.creators[player.name] then
+        Permissions.creator_group.add_player(player)
+        Permissions.log("Added player <"..player.name.."> to <creators> group")
+    else
+        Permissions.player_group.add_player(player)
+        Permissions.log("Added player <"..player.name.."> to <players> group")
+    end
 end
 
 -- Remove a player from the permission group
@@ -63,6 +69,36 @@ function Permissions.create_player_permission_group()
 
     -- Save it to the state
     Permissions.player_group = group
+end
+
+-- Create a permission group. It will completely
+-- overwrite the existing group.
+function Permissions.create_creator_permission_group()
+    local permissions = game.permissions
+
+    -- Create group if it does not already exist
+    local group = permissions.get_group("creator")
+    if not group then
+        group = permissions.create_group("creator")
+    end
+
+    -- Overwrite all permissions
+    for _, permission in pairs(defines.input_action) do
+        group.set_allows_action(permission, true)
+    end
+
+    -- Save it to the state
+    Permissions.creator_group = group
+end
+
+-- Add a player to the player permissions group
+function Permissions.setup_permissions()
+    Permissions.create_player_permission_group()
+    Permissions.create_creator_permission_group()
+end
+
+function Permissions.log(msg)
+    log("Permissions: "..msg)
 end
 
 return Permissions
